{
  "version": 4,
  "terraform_version": "1.2.7",
  "serial": 98,
  "lineage": "08a2c262-c625-4032-fe0c-615a109d78bc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0adab7e75aa83b002",
            "association_id": "eipassoc-046302ffe32710057",
            "domain": "vpc",
            "id": "eipalloc-0adab7e75aa83b002",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-0a46c36830aa2f7e0",
            "private_dns": "ip-10-1-0-197.ap-southeast-1.compute.internal",
            "private_ip": "10.1.0.197",
            "public_dns": "ec2-52-76-152-87.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "52.76.152.87",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Stage-EIP"
            },
            "tags_all": {
              "Name": "Stage-EIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:792115914033:internet-gateway/igw-0fc441e4f3c16a982",
            "id": "igw-0fc441e4f3c16a982",
            "owner_id": "792115914033",
            "tags": {
              "Name": "stage-igw"
            },
            "tags_all": {
              "Name": "stage-igw"
            },
            "vpc_id": "vpc-03946791c1ed2c410"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0adab7e75aa83b002",
            "connectivity_type": "public",
            "id": "nat-01263fc55e90fbccb",
            "network_interface_id": "eni-0a46c36830aa2f7e0",
            "private_ip": "10.1.0.197",
            "public_ip": "52.76.152.87",
            "subnet_id": "subnet-02d805bd7e30a340e",
            "tags": {
              "Name": "Stage-NATgw"
            },
            "tags_all": {
              "Name": "Stage-NATgw"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:792115914033:route-table/rtb-0769d082d077154e4",
            "id": "rtb-0769d082d077154e4",
            "owner_id": "792115914033",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01263fc55e90fbccb",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Stage-private-Route"
            },
            "tags_all": {
              "Name": "Stage-private-Route"
            },
            "timeouts": null,
            "vpc_id": "vpc-03946791c1ed2c410"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.natgw",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:792115914033:route-table/rtb-016e795a80c0c82dc",
            "id": "rtb-016e795a80c0c82dc",
            "owner_id": "792115914033",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fc441e4f3c16a982",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Stage-Public-Route"
            },
            "tags_all": {
              "Name": "Stage-Public-Route"
            },
            "timeouts": null,
            "vpc_id": "vpc-03946791c1ed2c410"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "data",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ece31ee5b05102bd",
            "route_table_id": "rtb-0769d082d077154e4",
            "subnet_id": "subnet-03ac59fbe57aba77b"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.data",
            "aws_subnet.public",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dbe2de07f828397d",
            "route_table_id": "rtb-0769d082d077154e4",
            "subnet_id": "subnet-0a04061129716111c"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.data",
            "aws_subnet.public",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-046b5f0b17b101d66",
            "route_table_id": "rtb-0769d082d077154e4",
            "subnet_id": "subnet-090fc6775508967f0"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.data",
            "aws_subnet.public",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ccbe9a04e0f5d8ce",
            "route_table_id": "rtb-0769d082d077154e4",
            "subnet_id": "subnet-0e5e0e8426be48ecb"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-071f441266edffd67",
            "route_table_id": "rtb-0769d082d077154e4",
            "subnet_id": "subnet-09400f1a73c7fdd57"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04e2c3d5d19e0a0d7",
            "route_table_id": "rtb-0769d082d077154e4",
            "subnet_id": "subnet-03ba0f29fd835aaed"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-097022413fab4a462",
            "route_table_id": "rtb-016e795a80c0c82dc",
            "subnet_id": "subnet-02d805bd7e30a340e"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04f76ea005796a007",
            "route_table_id": "rtb-016e795a80c0c82dc",
            "subnet_id": "subnet-006e2d77e23a3ea73"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-081aebb95391e0c2b",
            "route_table_id": "rtb-016e795a80c0c82dc",
            "subnet_id": "subnet-07bffb778ba51799d"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "data",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:792115914033:subnet/subnet-03ac59fbe57aba77b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.1.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03ac59fbe57aba77b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "792115914033",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Stage-Data-1-Subnet"
            },
            "tags_all": {
              "Name": "Stage-Data-1-Subnet"
            },
            "vpc_id": "vpc-03946791c1ed2c410"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:792115914033:subnet/subnet-0a04061129716111c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.1.7.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a04061129716111c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "792115914033",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Stage-Data-2-Subnet"
            },
            "tags_all": {
              "Name": "Stage-Data-2-Subnet"
            },
            "vpc_id": "vpc-03946791c1ed2c410"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:792115914033:subnet/subnet-090fc6775508967f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.1.8.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-090fc6775508967f0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "792115914033",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Stage-Data-3-Subnet"
            },
            "tags_all": {
              "Name": "Stage-Data-3-Subnet"
            },
            "vpc_id": "vpc-03946791c1ed2c410"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:792115914033:subnet/subnet-0e5e0e8426be48ecb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e5e0e8426be48ecb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "792115914033",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Stage-Private-1-Subnet"
            },
            "tags_all": {
              "Name": "Stage-Private-1-Subnet"
            },
            "vpc_id": "vpc-03946791c1ed2c410"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:792115914033:subnet/subnet-09400f1a73c7fdd57",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.1.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09400f1a73c7fdd57",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "792115914033",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Stage-Private-2-Subnet"
            },
            "tags_all": {
              "Name": "Stage-Private-2-Subnet"
            },
            "vpc_id": "vpc-03946791c1ed2c410"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:792115914033:subnet/subnet-03ba0f29fd835aaed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.1.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03ba0f29fd835aaed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "792115914033",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Stage-Private-3-Subnet"
            },
            "tags_all": {
              "Name": "Stage-Private-3-Subnet"
            },
            "vpc_id": "vpc-03946791c1ed2c410"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:792115914033:subnet/subnet-02d805bd7e30a340e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.1.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02d805bd7e30a340e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "792115914033",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Stage-Public-1-Subnet"
            },
            "tags_all": {
              "Name": "Stage-Public-1-Subnet"
            },
            "vpc_id": "vpc-03946791c1ed2c410"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:792115914033:subnet/subnet-006e2d77e23a3ea73",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-006e2d77e23a3ea73",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "792115914033",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Stage-Public-2-Subnet"
            },
            "tags_all": {
              "Name": "Stage-Public-2-Subnet"
            },
            "vpc_id": "vpc-03946791c1ed2c410"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:792115914033:subnet/subnet-07bffb778ba51799d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07bffb778ba51799d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "792115914033",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Stage-Public-3-Subnet"
            },
            "tags_all": {
              "Name": "Stage-Public-3-Subnet"
            },
            "vpc_id": "vpc-03946791c1ed2c410"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:792115914033:vpc/vpc-03946791c1ed2c410",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-01be87a1805f3a479",
            "default_route_table_id": "rtb-0ced91af1994a426d",
            "default_security_group_id": "sg-02d61e7bcc01b9ee2",
            "dhcp_options_id": "dopt-076a46123377649be",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-03946791c1ed2c410",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ced91af1994a426d",
            "owner_id": "792115914033",
            "tags": {
              "Name": "stage-vpc2",
              "Terraform": "True"
            },
            "tags_all": {
              "Name": "stage-vpc2",
              "Terraform": "True"
            }
          }
        }
      ]
    }
  ]
}